<resources>
    <string name="app_name">Adoptree</string>
    <string name="title_home">Home</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_feed">Feed</string>
    <string name="title_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="intro_first_fragment">Reduce you CO2 footprint by adopting a tree </string>
    <string name="intro_second_fragment">While your tree grows not only your CO2 footprint will reduce, but Wildlife will thrive, air will be fresher and water will be cleaner</string>

    <string name="error_log">"An error occurred: "</string>
    <string name="connection_error">No internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="introPage3_button_startNow">Start now</string>

    <string name="introPage3_adopters_title">Adopters</string>
    <string name="introPage3_adopters_number">1000</string>
    <string name="introPage3_forests_title">Forest</string>
    <string name="introPage3_forests_number">1</string>
    <string name="introPage3_treeTypes_title">Tree types</string>
    <string name="introPage3_treeTypes_number">2</string>
    <string name="introPage3_trees_title">Trees</string>
    <string name="introPage3_trees_number">2000</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in_short">Sign in</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="don_t_have_an_account_register_now">Haven\'t adopted a tree yet? Adopt now!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_not_now">Not now, maybe later</string>
    <string name="title_login_page">Log in to monitor your adopted tree</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">email</string>
    <string name="lastname">last name</string>
    <string name="firstname">first name</string>
    <string name="error_password_length">Password is too short</string>
    <string name="error_password_no_match">Passwords do not match!</string>
    <string name="wrong_credentials">Username or password is incorrect</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_adoption">AdoptionActivity</string>
    <string name="title_adopt_a_tree">Adopt a tree</string>
    <string name="register">Register</string>
    <string name="label_filter">Filter</string>
    <string name="test">TEST</string>
    <string name="results">results</string>
    <string name="next_step">next step</string>
    <string name="btn_adopt">Adopt</string>
    <string name="btn_info">info</string>
    <string name="title_overview">Overview</string>
    <string name="total">Total: </string>
    <string name="euro_sign">€</string>
    <string name="amount_40">40.10</string>
    <string name="retry">retry</string>
    <string name="title_activity_adoption_tree_info">AdoptionTreeInfoActivity</string>
    <string name="adopt_more">Adopt more</string>
    <string name="events">Events</string>
    <string name="Guided_tour">Guided tour</string>
    <string name="tour_text">Book your guided tour through the forest where you have adopted your tree.</string>
    <string name="green_ideas">Green ideas</string>
    <string name="further_reduce">How to further reduce your CO2 footprint? </string>
    <string name="personal_tour">Personal tour</string>
    <string name="tour_date">22 October 2020, 14:00 - 16:00</string>
    <string name="tour_location_title">Location: </string>
    <string name="tour_location">Mastbos</string>
    <string name="tour_visitors_title">Visitors: </string>
    <string name="tour_visitors_amount">2</string>
    <string name="tour_guide_title">Guide: </string>
    <string name="tour_guide">Arjan Postma</string>
    <string name="announcements">Announcements</string>
    <string name="text_announcements">"Stichting Adoptiebos has recently reached 1k adopters. "</string>
    <string name="text_announcements_date">05 October 2020</string>
    <string name="title_profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings_growth">Growth</string>
    <string name="settings_humidity">Humidity</string>
    <string name="settings_temperature">Temperature</string>
    <string name="settings_co2reduction">CO2 Reduction</string>
    <string name="settings_co2reductiontips">CO2 Reduction tips</string>
    <string name="settings_events">Events</string>
    <string name="general">General</string>
    <string name="settings_language">Language</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main">Home</string>
    <string name="timeline_not_logged_in_message">Login or adopt a tree to stay up to date with all your tree’s achievements and milestones.</string>
    <string name="adopt_now">adopt now</string>
    <string name="home_not_logged_in_why_adoptree">Why adopting a tree, why ADOPTREE?</string>
    <string name="select_text">The foundation will take care of planting your selected tree in the desired location.</string>
    <string name="select_title">Select your tree</string>
    <string name="available_trees">Available trees</string>
    <string name="monitor_title">Monitor your tree</string>
    <string name="monitor_text">You will be able to keep track of your tree growth, temperature, humidity and most importantly your CO2 reduction contribution. Your tree will be photographed and geolocated as well.</string>
    <string name="follow_title">Follow it\'s story</string>
    <string name="follow_text">You will be able to see your tree achievements and important milestones through the timeline.</string>
    <string name="greener_title">Make the planet greener</string>
    <string name="greener_text">As your tree grows, it will absorb CO2. This will mitigate climate change effects, protect the soil and wildlife, and help maintain the biodiversity.</string>
    <string name="adopt_now_text">Contribute now by adopting a tree</string>
    <string name="adopt_now_title">Adopt now</string>
    <string name="hello_you">Hello you!</string>
    <string name="log_in">Log in</string>
    <string name="email_example">helloyou@email.com</string>
    <string name="your_email">Your email</string>
    <string name="your_phone">Your phone</string>
    <string name="phone_example">+31611223344</string>
    <string name="your_address">Your address</string>
    <string name="address_example">Dorpsstraat 101</string>
    <string name="your_zip">Your zip code</string>
    <string name="zip_example">1122AB</string>
    <string name="your_country">Your country</string>
    <string name="country_example">Netherlands</string>
    <string name="not_trees_available">No trees available at this moment</string>
    <string name="successfully_added">Added to your shopping cart</string>
    <string name="amount">Amount</string>
    <string name="personal_sign">Personal sign</string>
    <string name="personal_sign_helper_text">You can add a personal sign any time you want</string>
    <string name="price">000</string>
    <string name="v1_0">1.0</string>
    <string name="thank_you">Thank you for your adoption</string>
    <string name="thank_you_text">With your contribution CO2 emissions can be  reduced and wildlife and biodiversity will further thrive.</string>
    <string name="find_my_tree">Find my tree</string>
    <string name="photos">Photo\'s</string>
    <string name="pictures">Pictures</string>
    <string name="wildlife">Wildlife</string>
    <string name="growth_value">3 m</string>
    <string name="co2reduction_value">100 g</string>
    <string name="humidity_value">40 %</string>
    <string name="temperature_value">20°C</string>
    <string name="overall_health">Overall health</string>
    <string name="log_out">Log out</string>
    <string name="home_no_trees">"It looks like you have not adopted any trees yet.. "</string>
    <string name="growth">Growth</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="co2_reduction">CO2 Reduction</string>
    <string name="co2_reduction_tips">CO2 Reduction tips</string>
    <string name="example_timeline_event_context">See monthly results</string>
    <string name="example_timeline_event_date">10th</string>
    <string name="example_timeline_month">January 2021</string>
    <string name="title_contractInformation">Contract information</string>
    <string name="title_privacypolicy">Privacy policy</string>
    <string name="title_aboutapp">About this application</string>
    <string name="pay">Pay</string>
    <string name="title_activity_book_a_tour">BookATourActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_book_a_tour">Book a tour</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="tree_name">tree name</string>
    <string name="change">Change</string>
    <string name="save_changes">Save changes</string>
    <string name="personalize_tree">Personalize your tree</string>
    <string name="read_more">Read more</string>
    <string name="hello">hello</string>
    <string name="total_co2reduction">Total CO2 reduction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>