<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_timeline"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/title_timeline"
        android:visible="true" />
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_baseline_dns_24"
        android:title="@string/title_feed"
        android:visible="true" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
</menu>