<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".ui.fragments.screens.IntroPage3Fragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="611dp"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_height="255dp"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:src="@drawable/logo_adoptiebos_png" />
        </TableRow>

        <TableRow android:layout_height="79dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_adopters_number"
                android:textSize="60dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="505dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_forests_number"
                android:textSize="60dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_adopters_title"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_forests_title"
                android:textSize="20dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_height="79dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="80dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_treeTypes_number"
                android:textSize="60dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_trees_number"
                android:textSize="60dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_treeTypes_title"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introPage3_trees_title"
                android:textSize="20dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp">

            <Button
                android:id="@+id/finish"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:text="@string/introPage3_button_startNow"
                android:theme="@style/CustomButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />
        </TableRow>

    </TableLayout>

</RelativeLayout>