<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="50sp"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp">
            <TextView
                android:id="@+id/tv_personal_tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:textAlignment="textStart"
                android:text="@string/personal_tour" />

            <ImageButton
                android:id="@+id/ib_update_tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_alignParentEnd="true"
                android:scaleType="fitEnd"
                android:layout_toRightOf="@id/tv_personal_tour"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:background="@color/colorWhite"/>

            <ImageView
                android:id="@+id/iv_forest"
                style="@style/round_corners"
                android:layout_width="wrap_content"
                android:layout_height="101sp"
                android:layout_below="@id/tv_personal_tour"
                android:src="@drawable/forest_image" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_date"
                android:layout_toRightOf="@id/iv_forest"
                android:layout_below="@id/tv_personal_tour"
                android:textColor="@color/color_redBrown"
                android:textSize="15sp"
                android:layout_margin="5sp" />

            <TextView
                android:id="@+id/tv_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_location_title"
                android:layout_toRightOf="@id/iv_forest"
                android:layout_below="@id/tv_date"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_location"
                android:layout_toRightOf="@id/tv_location_title"
                android:layout_below="@id/tv_date"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
            <TextView
                android:id="@+id/tv_visitors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_visitors_title"
                android:layout_toRightOf="@id/iv_forest"
                android:layout_below="@id/tv_location_title"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
            <TextView
                android:id="@+id/tv_visitors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_visitors_amount"
                android:layout_toRightOf="@id/tv_visitors_title"
                android:layout_below="@id/tv_location"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
            <TextView
                android:id="@+id/tv_guide_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_guide_title"
                android:layout_toRightOf="@id/iv_forest"
                android:layout_below="@id/tv_visitors_title"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
            <TextView
                android:id="@+id/tv_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_guide"
                android:layout_toRightOf="@id/tv_guide_title"
                android:layout_below="@id/tv_visitors"
                android:textSize="15sp"
                android:layout_marginLeft="5sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>